# estudo-airflow3

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  exec_container.sh  pyproject.toml
.github/: copilot-instructions.md
chamada_api/: api_airlfow.py
chamadas_api/: executar_dag.py
config/: airflow.cfg
dags/: 001.py  002.py  003.py  004.py  005.py  006.py  007.py  008_filha1.py  008_filha2.py  008_pai.py  009.py  010.py
scripts/: airflow_run_dag.sh  api_executar_dag.py  api_executar_dag_wait.py  api_executar_dag_wait1.py  api_obter_token.sh  clean_airflow_metadata.sh  manutencao_limpar_base.sh
