[project]
name = "estudo-airflow3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apache-airflow==3.1.1",
    "httpx>=0.28.1",
    "ipdb>=0.13.13",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100
# Inclui grupos de regras
select = [
    "E",   # erros de estilo
    "F",   # erros de lógica / pyflakes
    "I",   # imports
    "B",   # bugbear (boas práticas)
    #"ANN", # exige type hints
    #"TCH", # checa compatibilidade e consistência de tipos
]
extend-exclude = ["dags/__pycache__", "plugins/__pycache__"]
